segunda pagina completa

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <div class="container">
     <div id="barra">
         <ul id="menu">
-            <li><img src="imagenes/breda-mini.jpg"></li>
-            <li><img src="imagenes/venus-mini.jpg"></li>
-            <li><img src="imagenes/meninas-mini.jpg"></li>
-            <li><img src="imagenes/vulcano-mini.jpg"></li>
-            <li><img src="imagenes/inocencio-mini.jpg"></li>
+            <li><a href="index.html"><img src="imagenes/breda-mini.jpg"></a></li>
+            <li><a href="venus.html"><img src="imagenes/venus-mini.jpg"></a></li>
+            <li><a href="meninas.html"><img src="imagenes/meninas-mini.jpg"></a></li>
+            <li><a href="vulcano.html"><img src="imagenes/vulcano-mini.jpg"></a></li>
+            <li><a href="el papa.html"><img src="imagenes/inocencio-mini.jpg"></a></li>
         </ul>
     </div>
     
